Fixed modal issue where body was being shifted to the left when opening modal

--- a/sources/css/fellow.css
+++ b/sources/css/fellow.css
@@ -1,3 +1,7 @@
+body.modal-open { 
+    overflow:inherit; 
+    padding-right:inherit !important; }
+
 .fellowlist {
     height: 200vh;
 }
